# esp32-player

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  flash_storage.cpp  flash_storage.h  main.cpp  nv_storage.cpp  nv_storage.h
main/audio/: audio_buffer.cpp  audio_buffer.h  audio_player.cpp  audio_player.h  wav_player.cpp  wav_player.h
main/bluetooth/: bluetooth.cpp  bluetooth.h
main/states/: States.cmake  state.cpp  state.h  state_manager.cpp  state_manager.h  state_subsystem.cpp  state_subsystem.h
main/states/audio/: connecting_audio_state.cpp  connecting_audio_state.h  pairing_audio_state.cpp  pairing_audio_state.h  playing_audio_state.cpp  playing_audio_state.h
main/states/bluetooth/: connecting_bt_state.cpp  connecting_bt_state.h  pairing_bt_state.cpp  pairing_bt_state.h  playing_bt_state.cpp  playing_bt_state.h
